syntax = "proto3";
package bze.tradebin.v1;

option go_package = "github.com/bze-alphateam/bze/x/tradebin/types";

message Market {
  string asset1 = 1; 
  string asset2 = 2; 
  string creator = 3; 
  
}

